[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Graphics/Sprites/Door/door2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Graphics/Sprites/Door/door1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Graphics/Sprites/Door/door5.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/Sprites/Door/door6.png" type="Texture" id=4]
[ext_resource path="res://Assets/Graphics/Sprites/Door/door4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Graphics/Sprites/Door/door3.png" type="Texture" id=6]
[ext_resource path="res://Assets/Graphics/Sprites/Door/door_back.png" type="Texture" id=7]
[ext_resource path="res://Objects/Items/Door/Door.gd" type="Script" id=8]
[ext_resource path="res://Assets/Audio/Items/door_open.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Audio/Items/door_close.wav" type="AudioStream" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": false,
"name": "close",
"speed": 12.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": false,
"name": "open",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[node name="Door" type="Area2D"]
z_index = -1
script = ExtResource( 8 )

[node name="back" type="Sprite" parent="."]
position = Vector2( 8, -2 )
z_index = -1
texture = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 8, -2 )
frames = SubResource( 1 )
animation = "open"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 2 )

[node name="SFXOpen" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
max_distance = 300.0
bus = "SFX"

[node name="SFXClose" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
max_distance = 300.0
bus = "SFX"
[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
